メッセージ更新なの〜

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <div class="container">
+  <div>
+    第一回は 4/2(月)朝 配信開始予定！<br />
+    ゲストはTechBoosterやDroidKaigiでおなじみの <a href=https://twitter.com/mhidaka>mhidakaさん</a> です！<br />
+    聞いてみたいことがあれば #田舎fm を付けてつぶやいてね☆
+  </div>
   <div class="card">
     {% for post in site.posts %}
       <article class="list-group-element">
