次回予告を追加

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="container">
+  <p>次回は4/9(月) mhidakaさん後編を配信予定☆</p>
   <div class="card">
     {% for post in site.posts %}
       <article class="list-group-element">
