--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container">
-  <p>次回は4/22(日) らこらこさん後編を配信予定☆</p>
+  <p>次回は5/6(日) 新しいゲストをお招きする予定です！！<br/>4/29はおやすみなので、みんなもバカンスを楽しんでくれよな！</p>
   <div class="card">
     {% for post in site.posts %}
       <article class="list-group-element">
