お便り導線を追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="container">
   <div class="card">
+    <p><a href=https://peing.net/ja/inaka_fm?v=1&event=0>田舎.fmへのおたよりはこちら！</a></p>
     {% for post in site.posts %}
       <article class="list-group-element">
         <h1 class="list-group-element-heading">
